@@ -3,15 +3,14 @@ package us.dot.its.jpo.ode.api.services;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.http.HttpStatus;
 import org.springframework.web.server.ResponseStatusException;
 
 import us.dot.its.jpo.ode.api.mappers.RsuInfoMapper;
@@ -19,9 +18,7 @@ import us.dot.its.jpo.ode.api.mappers.RsuPatchMapper;
 import us.dot.its.jpo.ode.api.models.devices.RsuInfoDto;
 import us.dot.its.jpo.ode.api.models.devices.management.ModifyRsuAllowedSelections;
 import us.dot.its.jpo.ode.api.models.devices.management.RsuPatch;
-import us.dot.its.jpo.ode.api.models.keycloak.CvManagerAuthToken;
 import us.dot.its.jpo.ode.api.models.SimplePosition;
-import us.dot.its.jpo.ode.api.models.UserRole;
 import us.dot.its.jpo.ode.api.models.postgres.tables.Organization;
 import us.dot.its.jpo.ode.api.models.postgres.tables.Rsu;
 import us.dot.its.jpo.ode.api.models.postgres.tables.RsuCredential;
@@ -50,9 +47,11 @@ import java.util.HashSet;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 
@@ -110,9 +109,6 @@ class RsuManagementServiceTest {
     @Mock
     private RsuPatchMapper rsuPatchMapper;
 
-    @Mock
-    private CvManagerAuthToken authToken;
-
     @InjectMocks
     private RsuManagementService rsuManagementService;
 
@@ -122,8 +118,11 @@ class RsuManagementServiceTest {
 
     @BeforeEach
     void setUp() {
+        testOrg.setId(1);
         testOrg.setName("Org1");
+        testOrg2.setId(2);
         testOrg2.setName("Org2");
+        testOrg3.setId(3);
         testOrg3.setName("Org3");
     }
 
@@ -146,8 +145,8 @@ class RsuManagementServiceTest {
                 "ssh-group",
                 "snmp-group",
                 "v3",
-                Arrays.asList("Org1", "Org2"),
-                Boolean.TRUE,
+                Arrays.asList(1, 2),
+                        Boolean.TRUE,
                 Boolean.TRUE);
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(mockRsu);
@@ -194,7 +193,6 @@ class RsuManagementServiceTest {
 
     @Test
     void testGetAllRsuInfo_Success() {
-        String orgName = "TestOrg";
         String search = "Search Term";
         Pageable pageable = PageRequest.of(0, 10);
 
@@ -214,7 +212,7 @@ class RsuManagementServiceTest {
                 "ssh1",
                 "snmp1",
                 "v3",
-                Arrays.asList("TestOrg"),
+                Arrays.asList(1),
                 Boolean.TRUE,
                 Boolean.TRUE);
         RsuInfoDto dto2 = new RsuInfoDto(
@@ -228,40 +226,39 @@ class RsuManagementServiceTest {
                 "ssh2",
                 "snmp2",
                 "v2c",
-                Arrays.asList("TestOrg"),
+                Arrays.asList(1),
                 Boolean.TRUE,
                 Boolean.TRUE);
 
-        when(rsuRepository.findAllByOrganization(orgName, search, pageable)).thenReturn(rsuPage);
+        when(rsuRepository.findAllByOrganization(testOrg, search, pageable)).thenReturn(rsuPage);
         when(rsuMapper.toDto(rsu1)).thenReturn(dto1);
         when(rsuMapper.toDto(rsu2)).thenReturn(dto2);
 
-        Page<RsuInfoDto> result = rsuManagementService.getAllRsuInfo(orgName, search, pageable);
+        Page<RsuInfoDto> result = rsuManagementService.getAllRsuInfo(testOrg, search, pageable);
 
         assertNotNull(result);
         assertEquals(2, result.getTotalElements());
         assertEquals(2, result.getContent().size());
         assertEquals("192.168.1.100", result.getContent().get(0).getIpv4Address());
         assertEquals("192.168.1.101", result.getContent().get(1).getIpv4Address());
-        verify(rsuRepository).findAllByOrganization(orgName, search, pageable);
+        verify(rsuRepository).findAllByOrganization(testOrg, search, pageable);
         verify(rsuMapper, times(2)).toDto(any(Rsu.class));
     }
 
     @Test
     void testGetAllRsuInfo_EmptyResult() {
-        String orgName = "EmptyOrg";
         String search = "Search Term";
         Pageable pageable = PageRequest.of(0, 10);
         Page<Rsu> emptyPage = new PageImpl<>(List.of(), pageable, 0);
 
-        when(rsuRepository.findAllByOrganization(orgName, search, pageable)).thenReturn(emptyPage);
+        when(rsuRepository.findAllByOrganization(testOrg, search, pageable)).thenReturn(emptyPage);
 
-        Page<RsuInfoDto> result = rsuManagementService.getAllRsuInfo(orgName, search, pageable);
+        Page<RsuInfoDto> result = rsuManagementService.getAllRsuInfo(testOrg, search, pageable);
 
         assertNotNull(result);
         assertEquals(0, result.getTotalElements());
         assertTrue(result.getContent().isEmpty());
-        verify(rsuRepository).findAllByOrganization(orgName, search, pageable);
+        verify(rsuRepository).findAllByOrganization(testOrg, search, pageable);
         verify(rsuMapper, never()).toDto(any());
     }
 
@@ -285,9 +282,8 @@ class RsuManagementServiceTest {
         when(rsuCredentialRepository.findAllNicknames()).thenReturn(sshCredentials);
         when(snmpCredentialRepository.findAllNicknames()).thenReturn(snmpCredentials);
         when(snmpProtocolRepository.findAllNicknames()).thenReturn(snmpVersions);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(Arrays.asList(testOrg, testOrg2));
 
-        ModifyRsuAllowedSelections result = rsuManagementService.getAllowedSelections(authToken);
+        ModifyRsuAllowedSelections result = rsuManagementService.getAllowedSelections(List.of(testOrg, testOrg2));
 
         assertNotNull(result);
 
@@ -308,8 +304,8 @@ class RsuManagementServiceTest {
         assertTrue(result.getSnmpVersionGroups().contains("v2c"));
 
         assertEquals(2, result.getOrganizations().size());
-        assertTrue(result.getOrganizations().contains("Org1"));
-        assertTrue(result.getOrganizations().contains("Org2"));
+        assertTrue(result.getOrganizations().contains(1));
+        assertTrue(result.getOrganizations().contains(2));
 
         verify(rsuRepository).findAllPrimaryRoutes();
         verify(rsuRepository).findAllRsuModels();
@@ -326,9 +322,8 @@ class RsuManagementServiceTest {
         when(rsuCredentialRepository.findAllNicknames()).thenReturn(List.of());
         when(snmpCredentialRepository.findAllNicknames()).thenReturn(List.of());
         when(snmpProtocolRepository.findAllNicknames()).thenReturn(List.of());
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(List.of());
 
-        ModifyRsuAllowedSelections result = rsuManagementService.getAllowedSelections(authToken);
+        ModifyRsuAllowedSelections result = rsuManagementService.getAllowedSelections(List.of());
 
         assertNotNull(result);
         assertTrue(result.getPrimaryRoutes().isEmpty());
@@ -367,7 +362,7 @@ class RsuManagementServiceTest {
                 "ssh-group",
                 "snmp-group",
                 "v3",
-                Arrays.asList("Org1"),
+                Arrays.asList(1),
                 Boolean.TRUE,
                 Boolean.TRUE);
 
@@ -375,9 +370,8 @@ class RsuManagementServiceTest {
         doNothing().when(rsuPatchMapper).updateRsuFromPatch(patch, existingRsu);
         when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
         when(rsuMapper.toDto(existingRsu)).thenReturn(expectedDto);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(List.of(testOrg));
 
-        RsuInfoDto result = rsuManagementService.modifyRsu(rsuIp, patch, authToken);
+        RsuInfoDto result = rsuManagementService.modifyRsu(rsuIp, patch, List.of(testOrg));
 
         assertNotNull(result);
         assertEquals(150.0, result.getMilepost());
@@ -408,9 +402,8 @@ class RsuManagementServiceTest {
                 .thenReturn(Optional.of(newModel));
         when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
         when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(List.of(testOrg));
 
-        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
+        rsuManagementService.modifyRsu(rsuIp, patch, List.of(testOrg));
 
         verify(rsuModelRepository).findByNameAndManufacturerName("RSU-2X", "Yunex");
         verify(rsuRepository).save(existingRsu);
@@ -440,9 +433,8 @@ class RsuManagementServiceTest {
         when(snmpProtocolRepository.findByNickname("v3")).thenReturn(Optional.of(snmpProtocol));
         when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
         when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(List.of(testOrg));
 
-        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
+        rsuManagementService.modifyRsu(rsuIp, patch, List.of(testOrg));
 
         verify(rsuCredentialRepository).findByNickname("ssh-group-new");
         verify(snmpCredentialRepository).findByNickname("snmp-group-new");
@@ -459,7 +451,7 @@ class RsuManagementServiceTest {
 
         ResponseStatusException exception = assertThrows(
                 ResponseStatusException.class,
-                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
+                () -> rsuManagementService.modifyRsu(rsuIp, patch, List.of(testOrg)));
 
         assertTrue(exception.getMessage().contains("RSU not found"));
         verify(rsuRepository, never()).save(any());
@@ -472,7 +464,7 @@ class RsuManagementServiceTest {
 
         ResponseStatusException exception = assertThrows(
                 ResponseStatusException.class,
-                () -> rsuManagementService.modifyRsu(invalidIp, patch, authToken));
+                () -> rsuManagementService.modifyRsu(invalidIp, patch, List.of(testOrg)));
 
         assertTrue(exception.getMessage().contains("Invalid IP address"));
         verify(rsuRepository, never()).save(any());
@@ -495,7 +487,7 @@ class RsuManagementServiceTest {
 
         ResponseStatusException exception = assertThrows(
                 ResponseStatusException.class,
-                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
+                () -> rsuManagementService.modifyRsu(rsuIp, patch, List.of(testOrg)));
 
         assertTrue(exception.getMessage().contains("Model not found"));
     }
@@ -515,7 +507,7 @@ class RsuManagementServiceTest {
 
         ResponseStatusException exception = assertThrows(
                 ResponseStatusException.class,
-                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
+                () -> rsuManagementService.modifyRsu(rsuIp, patch, List.of(testOrg)));
 
         assertTrue(exception.getMessage().contains("Invalid model format"));
     }
@@ -528,7 +520,7 @@ class RsuManagementServiceTest {
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
         RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToAdd(Arrays.asList("Org1", "Org2"));
+        patch.setOrganizations(Arrays.asList(1, 2));
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
@@ -539,11 +531,14 @@ class RsuManagementServiceTest {
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
         when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
         when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(authorizedOrgs);
 
-        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
+        rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs);
 
-        verify(rsuOrganizationRepository, times(2)).save(any(RsuOrganization.class));
+        ArgumentCaptor<List<RsuOrganization>> captor = ArgumentCaptor.forClass(List.class);
+        verify(rsuOrganizationRepository, times(1)).saveAll(captor.capture());
+        List<RsuOrganization> savedList = captor.getValue();
+        assertEquals(2, savedList.size(), "Expected saveAll to be called with a list of size 2");
+        verify(rsuOrganizationRepository, never()).deleteAll(anyList());
     }
 
     @Test
@@ -552,21 +547,24 @@ class RsuManagementServiceTest {
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
         RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToAdd(Arrays.asList("Org1"));
+        patch.setOrganizations(Arrays.asList(1));
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new HashSet<>());
+        existingRsu.setRsuOrganizations(Set.of(new RsuOrganization() {
+            {
+                setRsu(existingRsu);
+                setOrganization(testOrg);
+            }
+        }));
 
         List<Organization> authorizedOrgs = Arrays.asList(testOrg);
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(authorizedOrgs);
-        when(rsuOrganizationRepository.save(any(RsuOrganization.class)))
-                .thenThrow(new DataIntegrityViolationException("Duplicate entry"));
 
-        assertThrows(DataIntegrityViolationException.class,
-                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
+        rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs);
+        verify(rsuOrganizationRepository, never()).saveAll(anyList());
+        verify(rsuOrganizationRepository, never()).deleteAll(anyList());
     }
 
     @Test
@@ -575,7 +573,7 @@ class RsuManagementServiceTest {
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
         RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToAdd(Arrays.asList("UnauthorizedOrg"));
+        patch.setOrganizations(Arrays.asList(9));
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
@@ -584,41 +582,15 @@ class RsuManagementServiceTest {
         List<Organization> authorizedOrgs = Arrays.asList(testOrg, testOrg2);
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(authorizedOrgs);
 
         IllegalArgumentException exception = assertThrows(
                 IllegalArgumentException.class,
-                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
+                () -> rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs));
 
         assertTrue(
-                exception.getMessage().contains("Organization not found or user not authorized for: UnauthorizedOrg"));
-        verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
-    }
-
-    @Test
-    void testHandleOrganizationChanges_AddOrganizations_OrganizationNotFound() throws UnknownHostException {
-        String rsuIp = "192.168.1.100";
-        InetAddress inetAddress = InetAddress.getByName(rsuIp);
-
-        RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToAdd(Arrays.asList("NonExistentOrg"));
-
-        Rsu existingRsu = new Rsu();
-        existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new HashSet<>());
-
-        List<Organization> authorizedOrgs = Arrays.asList();
-
-        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(authorizedOrgs);
-
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
-                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
-
-        assertTrue(
-                exception.getMessage().contains("Organization not found or user not authorized for: NonExistentOrg"));
-        verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
+                exception.getMessage().contains("Organization not found or user not authorized for: 9"));
+        verify(rsuOrganizationRepository, never()).saveAll(anyList());
+        verify(rsuOrganizationRepository, never()).deleteAll(anyList());
     }
 
     @Test
@@ -627,11 +599,10 @@ class RsuManagementServiceTest {
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
         RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToRemove(Arrays.asList("Org1", "Org2"));
+        patch.setOrganizations(List.of());
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new HashSet<>());
 
         RsuOrganization rsuOrg1 = new RsuOrganization();
         rsuOrg1.setRsu(existingRsu);
@@ -641,21 +612,23 @@ class RsuManagementServiceTest {
         rsuOrg2.setRsu(existingRsu);
         rsuOrg2.setOrganization(testOrg2);
 
+        existingRsu.setRsuOrganizations(Set.of(rsuOrg1, rsuOrg2));
+
         List<Organization> authorizedOrgs = Arrays.asList(testOrg, testOrg2, testOrg3);
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-        when(rsuOrganizationRepository.findByRsuIpv4AddressAndOrganization_Name(inetAddress, "Org1"))
-                .thenReturn(Optional.of(rsuOrg1));
-        when(rsuOrganizationRepository.findByRsuIpv4AddressAndOrganization_Name(inetAddress, "Org2"))
-                .thenReturn(Optional.of(rsuOrg2));
         when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
         when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(authorizedOrgs);
 
-        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
+        rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs);
 
-        verify(rsuOrganizationRepository).delete(rsuOrg1);
-        verify(rsuOrganizationRepository).delete(rsuOrg2);
+        verify(rsuOrganizationRepository, never()).saveAll(anyList());
+        ArgumentCaptor<List<RsuOrganization>> deleteCaptor = ArgumentCaptor.forClass(List.class);
+        verify(rsuOrganizationRepository).deleteAll(deleteCaptor.capture());
+        List<RsuOrganization> deletedList = deleteCaptor.getValue();
+        assertEquals(2, deletedList.size());
+        assertTrue(deletedList.contains(rsuOrg1));
+        assertTrue(deletedList.contains(rsuOrg2));
     }
 
     @Test
@@ -664,7 +637,7 @@ class RsuManagementServiceTest {
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
         RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToRemove(Arrays.asList("Org1"));
+        patch.setOrganizations(Arrays.asList(1));
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
@@ -673,41 +646,12 @@ class RsuManagementServiceTest {
         List<Organization> authorizedOrgs = Arrays.asList(testOrg);
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-        when(rsuOrganizationRepository.findByRsuIpv4AddressAndOrganization_Name(inetAddress, "Org1"))
-                .thenReturn(Optional.empty());
         when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
         when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(authorizedOrgs);
 
-        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
+        rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs);
 
-        verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
-    }
-
-    @Test
-    void testHandleOrganizationChanges_RemoveOrganizations_Unauthorized() throws UnknownHostException {
-        String rsuIp = "192.168.1.100";
-        InetAddress inetAddress = InetAddress.getByName(rsuIp);
-
-        RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToRemove(Arrays.asList("UnauthorizedOrg"));
-
-        Rsu existingRsu = new Rsu();
-        existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new HashSet<>());
-
-        List<Organization> authorizedOrgs = Arrays.asList(testOrg, testOrg2);
-
-        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(authorizedOrgs);
-
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
-                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
-
-        assertTrue(
-                exception.getMessage().contains("Organization not found or user not authorized for: UnauthorizedOrg"));
-        verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
+        verify(rsuOrganizationRepository, never()).deleteAll(anyList());
     }
 
     @Test
@@ -716,30 +660,30 @@ class RsuManagementServiceTest {
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
         RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToAdd(Arrays.asList("Org1"));
-        patch.setOrganizationsToRemove(Arrays.asList("Org2"));
+        patch.setOrganizations(List.of(testOrg.getId()));
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new HashSet<>());
 
         RsuOrganization rsuOrgToRemove = new RsuOrganization();
         rsuOrgToRemove.setRsu(existingRsu);
         rsuOrgToRemove.setOrganization(testOrg2);
+
+        existingRsu.setRsuOrganizations(Set.of(rsuOrgToRemove));
 
         List<Organization> authorizedOrgs = Arrays.asList(testOrg, testOrg2);
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
         when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
         when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(authorizedOrgs);
-        when(rsuOrganizationRepository.findByRsuIpv4AddressAndOrganization_Name(inetAddress, "Org2"))
-                .thenReturn(Optional.of(rsuOrgToRemove));
 
-        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
+        rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs);
 
-        verify(rsuOrganizationRepository).save(any(RsuOrganization.class));
-        verify(rsuOrganizationRepository).delete(rsuOrgToRemove);
+        ArgumentCaptor<List<RsuOrganization>> captor = ArgumentCaptor.forClass(List.class);
+        verify(rsuOrganizationRepository, times(1)).saveAll(captor.capture());
+        List<RsuOrganization> savedList = captor.getValue();
+        assertEquals(1, savedList.size(), "Expected saveAll to be called with a list of size 1");
+        verify(rsuOrganizationRepository).deleteAll(List.of(rsuOrgToRemove));
     }
 
     @Test
@@ -748,7 +692,7 @@ class RsuManagementServiceTest {
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
         RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToAdd(Arrays.asList("Org1", "UnauthorizedOrg1", "UnauthorizedOrg2"));
+        patch.setOrganizations(List.of(1, 8, 9));
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
@@ -757,13 +701,13 @@ class RsuManagementServiceTest {
         List<Organization> authorizedOrgs = Arrays.asList(testOrg);
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(authorizedOrgs);
 
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
-                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+                () -> rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs));
+        assertTrue(ex.getMessage().contains("8"));
 
-        assertTrue(exception.getMessage().contains("UnauthorizedOrg1"));
+        verify(rsuOrganizationRepository, never()).saveAll(anyList());
+        verify(rsuOrganizationRepository, never()).deleteAll(anyList());
     }
 
     @Test
@@ -772,23 +716,33 @@ class RsuManagementServiceTest {
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
         RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToRemove(Arrays.asList("Org1", "UnauthorizedOrg1", "UnauthorizedOrg2"));
+        patch.setOrganizations(List.of());
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new HashSet<>());
+        existingRsu.setRsuOrganizations(Set.of(new RsuOrganization() {
+            {
+                setRsu(existingRsu);
+                setOrganization(testOrg);
+            }
+        },
+                new RsuOrganization() {
+                    {
+                        setRsu(existingRsu);
+                        setOrganization(testOrg2);
+                    }
+                }));
 
         List<Organization> authorizedOrgs = Arrays.asList(testOrg);
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(authorizedOrgs);
 
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
-                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
+        rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs);
 
-        assertTrue(exception.getMessage().contains("UnauthorizedOrg1"));
-        verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
+        ArgumentCaptor<List<RsuOrganization>> captor = ArgumentCaptor.forClass(List.class);
+        verify(rsuOrganizationRepository, times(1)).deleteAll(captor.capture());
+        List<RsuOrganization> deletedList = captor.getValue();
+        assertEquals(1, deletedList.size(), "Expected delete to be called with a list of size 1");
     }
 
     @Test
@@ -806,55 +760,10 @@ class RsuManagementServiceTest {
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
         when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
         when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(List.of());
 
-        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
-
-        verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
-        verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
-    }
-
-    @Test
-    void testHandleOrganizationChanges_EmptyAddList() throws UnknownHostException {
-        String rsuIp = "192.168.1.100";
-        InetAddress inetAddress = InetAddress.getByName(rsuIp);
-
-        RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToAdd(List.of());
-
-        Rsu existingRsu = new Rsu();
-        existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new HashSet<>());
-
-        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-        when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
-        when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(List.of());
-
-        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
+        rsuManagementService.modifyRsu(rsuIp, patch, List.of());
 
         verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
-    }
-
-    @Test
-    void testHandleOrganizationChanges_EmptyRemoveList() throws UnknownHostException {
-        String rsuIp = "192.168.1.100";
-        InetAddress inetAddress = InetAddress.getByName(rsuIp);
-
-        RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToRemove(List.of());
-
-        Rsu existingRsu = new Rsu();
-        existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new HashSet<>());
-
-        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-        when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
-        when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-        when(authToken.getQualifiedOrgList(UserRole.ADMIN)).thenReturn(List.of());
-
-        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
-
         verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
     }
 
